--- a/colaboraciones.html
+++ b/colaboraciones.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colaboraciones</title>
+    <title>Oveja Púrpura - Colaboraciones</title>
+    <meta name="description" content="Participamos con diferentes marcas.">
+    <meta name="keywords" content="Talleres, Diseño, confección, Oveja Púrpura, Aprender, Creatividad, Quito, Ecuador, Workshops, La floresta">
     <link rel="shortcut icon" href="./img/IMG_6129.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -45,23 +47,15 @@
     <article>
         <h2 class="titulo">colaboraciones</h2>
         <div class="colaboraciones">
-            <p class="texto__colaboraciones">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda rerum
-                voluptates ex, modi beatae earum
-                ea
-                dicta qui similique recusandae praesentium minus repudiandae voluptatibus quaerat, expedita iure nemo
-                inventore fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quidem repellat unde id
-                amet
-                repudiandae quia minus maiores eveniet nemo ea voluptas assumenda laborum, doloremque eos minima itaque!
-                Libero, voluptas.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptatem expedita fugiat aperiam
-                commodi consequuntur. Et hic in expedita molestias unde numquam dolor, asperiores mollitia dignissimos
-                id laudantium, praesentium ab.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente est quia ipsa, vitae cupiditate
-                libero mollitia recusandae nisi, doloremque excepturi explicabo doloribus aperiam magni at eius
-                praesentium laboriosam aliquid error!
+            <p class="texto__colaboraciones">Nos encanta ser parte de la comunidad de emprendedores de nuestro país. Para eso colaboramos con diferentes marcas, ya sea en la parte de confección, producción o comunicación. Si quieres realizar una colaboración comunícate con nosotros, por nuestras redes o mensajes directos, nuestro equipo estará encantado de trabajar en conjunto.<br>
+                "Una oveja común, no genera impresión ni emoción,
+                hasta llegan a ser aburridas… Pero una Oveja Purpura es algo nuevo y sorprendente… 
+                                               hasta que también se convierte en algo común"<br>
+      
+                                                                                                           Seth Godin
 
             </p>
-            <img class="imagen__colaboraciones" src="./img/IMG_6095.jpg" alt="foto taller" width="528px" height="371px">
+            <img class="imagen__colaboraciones" src="./img/IMG_6095.jpg" alt="foto taller">
         </div>
     </article>
 
@@ -69,16 +63,10 @@
         <h4 class="titulo">Marcas y talleres que han colaborado con nosotros</h4>
         <div class="marcas">
             <div class="marca__urku">
-                <img class="imagen__urku" src="./img/IMG_6092.jpg" alt="urku" width="278px" height="274px">
+                <img class="imagen__urku" src="./img/IMG_6092.jpg" alt="urku">
                 <div class="texto__urku">
                     <h5 class="subtitulo">urku serigrafía</h5>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
-                        exercitationem vel sit earum
-                        provident
-                        facere, voluptates nam enim nisi commodi? Id veritatis, debitis nulla enim ullam doloribus!
-                        Illo,
-                        vitae
-                        minima!
+                    <p> Diseñadores emprendedores con una forma diferente de ver el diseño, crean el taller Urku Serigrafia, un espacio para artistas que quieran plasmar sus ideas graficas en lienzos.
                     </p>
                 </div>
             </div>
@@ -87,29 +75,17 @@
 
                 <div class="texto__zular">
                     <h5 class="subtitulo">café zular</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
-                        exercitationem vel sit earum
-                        provident
-                        facere, voluptates nam enim nisi commodi? Id veritatis, debitis nulla enim ullam doloribus!
-                        Illo,
-                        vitae
-                        minima!
+                    <p>Café Zular es una empresa ecuatoriana dedicada al proceso del tostado, molido y empacado de café, ofreciendo un producto de alta calidad de las diferentes provincias cafeteras del Ecuador. Su proposito es satisfacer a las personas que disfrutan de esta bebida, sembrando una cultura de tomadores de un café de especialidad. 
                     </p>
                 </div>
-                <img class="imagen__zular" src="./img/IMG_6090.jpg" alt="zular" width="278px" height="294px">
+                <img class="imagen__zular" src="./img/IMG_6090.jpg" alt="zular">
             </div>
 
             <div class="marca__film">
-                <img class="imagen__film" src="./img/IMG_6088.jpg" alt="ffs" width="278px" height="310px">
+                <img class="imagen__film" src="./img/IMG_6088.jpg" alt="ffs">
                 <div class="texto__film">
                     <h5 class="subtitulo">film forever store</h5>
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
-                        exercitationem vel sit earum
-                        provident
-                        facere, voluptates nam enim nisi commodi? Id veritatis, debitis nulla enim ullam doloribus!
-                        Illo,
-                        vitae
-                        minima!</p>
+                    <p class=""> Es una marca icónica en el mundo de la fotografía analógica. Con décadas de experiencia y dedicación a la artesanía de la fotografía tradicional, han establecido un legado que trasciende el tiempo. Film forever store se dedica a la recostruccion y venta de cámaras analógicas  </p>
                 </div>
             </div>
         </div>
@@ -140,7 +116,7 @@
         </div>
 
         <p class="correo">
-            telf: +593 98 512 7971
+            telf: +593 99 512 7971
             <br>
             ovejapurpuraws@gmail.com
         </p>
