--- a/workshops.html
+++ b/workshops.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WorkShops</title>
+    <title>Oveja Púrpura - WorkShops</title>
+    <meta name="description" content="Conoce nuestros talleres permanentes y temporales.">
+    <meta name="keywords" content="Talleres, Diseño, confección, Oveja Púrpura, Aprender, Creatividad, Quito, Ecuador, Workshops, La floresta">
     <link rel="shortcut icon" href="./img/IMG_6129.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -41,66 +43,67 @@
     </header>
 </body>
 
-<main class="main">
-    <h2 class="titulo">workshops permanentes</h2>
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="./img/IMG_6097.jpg" alt="costura inicial 1" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">costura inicial i</h5>
-    </div>
+<main class="main__workshops">
+    <div class="cajas__workshops">
+        <h2 class="titulo">workshops permanentes</h2>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="./img/IMG_6097.jpg" alt="costura inicial 1">
+            <h5 class="subtitulo__workshops">costura inicial i</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6098.jpg" alt="costura inicial 2" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">costura inicial ii</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6098.jpg" alt="costura inicial 2">
+            <h5 class="subtitulo__workshops">costura inicial ii</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/495e86c5-aed4-4a78-8a07-9d203474602a.jpg" alt="kimonos" width="200px"
-            height="200px">
-        <h5 class="subtitulo__workshops">kimonos</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/495e86c5-aed4-4a78-8a07-9d203474602a.jpg" alt="kimonos">
+            <h5 class="subtitulo__workshops">kimonos</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6110.jpg" alt="faldas" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">faldas</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6110.jpg" alt="faldas">
+            <h5 class="subtitulo__workshops">faldas</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6109.jpg" alt="Bralettes" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">bralettes</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6109.jpg" alt="Bralettes">
+            <h5 class="subtitulo__workshops">bralettes</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6100.jpg" alt="Joggers" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">joggers</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6100.jpg" alt="Joggers">
+            <h5 class="subtitulo__workshops">joggers</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6101.jpg" alt="Hoddies" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">hoddies</h5>
-    </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6101.jpg" alt="Hoddies">
+            <h5 class="subtitulo__workshops">hoddies</h5>
+        </div>
 
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6102.jpg" alt="vestido básico" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">vestido básico</h5>
-    </div>
-    <br>
-    <br>
-    <h2 class="titulo">workshops temporales de nuestras colaboradoras</h2>
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6111.jpg" alt="encuadernación" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">encuadernación</h5>
-    </div>
-    <div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6112.jpg" alt="tapiz" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">macramé básico</h5>
-</div>
-<div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6113.jpg" alt="punch neddle" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">punch neddle</h5>
-</div>
-<div class="cajita__workshops">
-        <img class="cajita__imagen" src="img/IMG_6114.jpg" alt="bondado con pedrería" width="200px" height="200px">
-        <h5 class="subtitulo__workshops">bordado con pedrería</h5>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6102.jpg" alt="vestido básico" >
+            <h5 class="subtitulo__workshops">vestido básico</h5>
+        </div>
+        <br>
+        <br>
+        <h2 class="titulo">workshops temporales de nuestras colaboradoras</h2>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6111.jpg" alt="encuadernación">
+            <h5 class="subtitulo__workshops">encuadernación</h5>
+        </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6112.jpg" alt="tapiz">
+            <h5 class="subtitulo__workshops">macramé básico</h5>
+        </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6113.jpg" alt="punch neddle">
+            <h5 class="subtitulo__workshops">punch neddle</h5>
+        </div>
+        <div class="cajita__workshops">
+            <img class="cajita__imagen" src="img/IMG_6114.jpg" alt="bondado con pedrería">
+            <h5 class="subtitulo__workshops">bordado con pedrería</h5>
+        </div>
     </div>
     <br>
 </main>
@@ -127,10 +130,10 @@
             </a>
         </div>
 
-        <p class="correo"">
-            telf: +593 98 512 7971
+        <p class="correo">
+            telf: +593 99 512 7971
             <br>
-            ovejapurpuraws@gmail.com 
+            ovejapurpuraws@gmail.com
         </p>
 
     </div>
