--- a/contacto.html
+++ b/contacto.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacto</title>
+    <title>Oveja Púrpura - contacto</title>
+    <meta name="description" content="Contáctate con oveja púrpura.">
+    <meta name="keywords" content="Talleres, Diseño, confección, Oveja Púrpura, Aprender, Creatividad, Quito, Ecuador, Workshops, La floresta">
     <link rel="shortcut icon" href="./img/IMG_6129.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -41,13 +43,13 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main__contacto">
         <div class="container">
 
-            <form id="formulario">
+            <form class="formulario">
                 <h2 class="titulo">contacto</h2>
                 <br>
-                <p>Si quieres información de nuestros talleres, colaboraciones o asesorías,<br> dejanos tu contacto y
+                <p class="texto__iniciocontacto">Si quieres información de nuestros talleres, colaboraciones o asesorías,<br> dejanos tu contacto y
                     nos comunicaremos contigo:</p>
                 <br>
                 <br>
@@ -83,8 +85,9 @@
                 </label>
                 <br>
                 <label for="si">
-                    <input type="checkbox" name="si" id="si">¿Deseas recibir más información de nuestros próximos
-                    talleres? <br>
+                    <input type="checkbox" class="checkbox" name="si" id="si">Deseas recibir más información de nuestros próximos
+                    talleres?
+                     <br>
                     <button class="boton" type="submit">Enviar</button>
                     <button class="boton" type="reset">Borrar</button>
 
@@ -95,10 +98,11 @@
             <div class="titulo">
                 <p>¿Donde nos ubicamos?</p>
             </div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.792036808014!2d-78.48474489013444!3d-0.2079711997891034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a0edcce4cbb%3A0xdcfc64192bc099b7!2sAvenida%20La%20Coru%C3%B1a%20%26%20Lugo%2C%20Quito%20170143%2C%20Ecuador!5e0!3m2!1ses!2sco!4v1695050289769!5m2!1ses!2sco"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="mapa">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.792036808014!2d-78.48474489013444!3d-0.2079711997891034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d59a0edcce4cbb%3A0xdcfc64192bc099b7!2sAvenida%20La%20Coru%C3%B1a%20%26%20Lugo%2C%20Quito%20170143%2C%20Ecuador!5e0!3m2!1ses!2sco!4v1695050289769!5m2!1ses!2sco" width="100%" height="100%"
+                 style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
         <br>
         <br>
@@ -128,7 +132,7 @@
             </div>
 
             <p class="correo">
-                telf: +593 98 512 7971
+                telf: +593 99 512 7971
                 <br>
                 ovejapurpuraws@gmail.com
             </p>
