--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Oveja Púrpura - Inicio</title>
+    <meta name="description" content="Talleres creativos.">
+    <meta name="keywords" content="Talleres, Diseño, confección, Oveja Púrpura, Aprender, Creatividad, Quito, Ecuador, Workshops, La floresta">
     <link rel="shortcut icon" href="./img/IMG_6129.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 
 </head>
 
-<body class="body">
+<body class="main__index">
     <header class="header">
+
         <nav>
             <div class="navoveja">
                 <img src="./img/IMG_6129.jpg" alt="Oveja encabezados" width="200px" height="160px">
                 <img src="./img/IMG_6129 2.jpg" alt="oveja titulo" width="220pxpx" height="50px">
             </div>
-            <hr>
+            <hr class="hr">
             <div>
                 <ul class="paginas">
                     <li class="menu">
@@ -44,7 +47,7 @@
     </header>
 
 
-    <main>
+    <main class="main__index">
         <div class="imageninicio">
 
             <div id="carouselExampleIndicators" class="carousel slide">
@@ -128,6 +131,7 @@
                             <br>
                         </section>
                     </div>
+                </article>
             </div>
             </article>
             <div class="section-container">
@@ -145,10 +149,10 @@
                     :)
                     <br>
                     <br>
-                    <img src="img/IMG_6119.jpg" alt="maquina" width="250px" height="250px">
-                    <img src="img/IMG_6116.jpg" alt="encuadernación taller" width="250px" height="250px">
-                    <img src="img/IMG_6115.jpg" alt="encuadernación mesa" width="250px" height="250px">
-                    <img src="img/IMG_6123.jpg" alt="chicas taller" width="250px" height="250px">
+                    <img src="img/IMG_6119.jpg" class="imagenes__index" alt="maquina">
+                    <img src="img/IMG_6116.jpg" class="imagenes__index" alt="encuadernación taller">
+                    <img src="img/IMG_6115.jpg" class="imagenes__index" alt="encuadernación mesa">
+                    <img src="img/IMG_6123.jpg" class="imagenes__index" alt="chicas taller">
                     <br>
                     <br>
                 </article>
@@ -178,33 +182,31 @@
     <footer class="footer">
         <br>
         <hr>
-        <div class="footer">
-            <img src="./img/logo oveja circular.png" alt="Logo oveja" width="180px" height="180px" class="logofooter">
+        <img src="./img/logo oveja circular.png" alt="Logo oveja" width="180px" height="180px" class="logofooter">
+        <div>
+            <a href="https://www.instagram.com/oveja.purpura/?hl=es-la" target="_blank" class="instagram">
+                <img src="./img/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.webp"
+                    alt="instagram" width="30px" height="30px">
+            </a>
+            <a href="https://www.facebook.com/ovejapurpuraws/" target="_blank" class="facebbok">
+                <img src="./img/4701482.png" alt="facebook" width="30px" height="30px">
+            </a>
+            <a href="https://www.tiktok.com/@oveja.purpura" target="_blank" class="tiktok">
+                <img src="./img/3938074.png" alt="tik tok" width="30px" height="30px">
+            </a>
+            <a href="https://www.youtube.com/@ovejapurpura7" target="_blank" class="youtube">
+                <img src="./img/1384012.png" alt="youtube" width="30px" height="30px">
+            </a>
+        </div>
 
-            <div>
-                <a href="https://www.instagram.com/oveja.purpura/?hl=es-la" target="_blank" class="instagram">
-                    <img src="./img/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.webp"
-                        alt="instagram" width="30px" height="30px">
-                </a>
-                <a href="https://www.facebook.com/ovejapurpuraws/" target="_blank" class="facebbok">
-                    <img src="./img/4701482.png" alt="facebook" width="30px" height="30px">
-                </a>
-                <a href="https://www.tiktok.com/@oveja.purpura" target="_blank" class="tiktok">
-                    <img src="./img/3938074.png" alt="tik tok" width="30px" height="30px">
-                </a>
-                <a href="https://www.youtube.com/@ovejapurpura7" target="_blank" class="youtube">
-                    <img src="./img/1384012.png" alt="youtube" width="30px" height="30px">
-                </a>
-            </div>
-
-            <p class="correo"">
-            telf: +593 98 512 7971
+        <p class="correo">
+            telf: +593 99 512 7971
             <br>
-            ovejapurpuraws@gmail.com 
-        </p>
+            ovejapurpuraws@gmail.com
 
-    </div>
-    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+
+            </div>
+            <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
                 crossorigin="anonymous">
                 </script>
