--- a/que_es_oveja.html
+++ b/que_es_oveja.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Qué es oveja púrpura?</title>
+    <title>Oveja Púrpura - ¿Qué es oveja púrpura?</title>
+    <meta name="description" content="Somos un espacio para que desarrolles tu lado púrpura.">
+    <meta name="keywords" content="Talleres, Diseño, confección, Oveja Púrpura, Aprender, Creatividad, Quito, Ecuador, Workshops, La floresta">
     <link rel="shortcut icon" href="./img/IMG_6129.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -46,25 +48,14 @@
         <div class="cajita__oveja">
             <h2 class="titulo">¿qué es oveja púrpura?</h2>
             <div class="contenido__oveja">
-                <p class="texto__oveja">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda rerum
-                    voluptates
-                    ex, modi beatae earum
-                    ea
-                    dicta qui similique recusandae praesentium minus repudiandae voluptatibus quaerat, expedita iure
-                    nemo
-                    inventore fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quidem repellat unde
-                    id
-                    amet
-                    repudiandae quia minus maiores eveniet nemo ea voluptas assumenda laborum, doloremque eos minima
-                    itaque!
-                    Libero, voluptas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                    necessitatibus ipsa quas veniam quod, iste quasi vitae saepe alias nam quos architecto suscipit
-                    commodi ducimus officia perspiciatis corporis reprehenderit nemo?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat saepe assumenda magni quia maiores
-                    voluptatem sapiente totam. Reprehenderit odit libero dolorum voluptates facere enim dolorem,
-                    molestiae recusandae consequatur quod ullam.
+                <p class="texto__oveja">Oveja Purpura Workshops es un espacio diseñado para estimular la Creación de Proyectos y el Desarrollo Personal de cada uno de nuestros alumnos, mediante distintos seminarios talleres y jornadas.
+                    Te sentiste alguna vez, la oveja negra de la familia?  Por querer hacer cosas, y realizar sueños, que nadie comprendía? Por sentir una energía, que no todos experimentaban? Pues déjame decirte que no eras la oveja negra, eres la Oveja Purpura de la familia,  creativa,  irreverente,  guerrera,  soñadora esa oveja que se sale del rebaño y marca la diferencia, si es así, esta invitación es para ti.
+                    Oveja Purpura Workshops es un espacio diseñado para dar rienda suelta a la creatividad, para aprender a hacer esas cosas, que siempre quisiste hacer, y no sabías como. Te brindamos las herramientas para que lo hagas con nosotros de forma práctica, para que aprendas, pruebes  y despliegues toda tu imaginación, no hace falta que tengas conocimientos previos, solo las ganas de aprender y pasar un rato agradable intercambiando conocimientos e ideas.
+                    Mes a mes vamos agregando diferentes workshops  de diferentes conceptos y temas, herramientas que te ayuden a desarrollar  todo tu potencial creativo.
+                    Anímate,  ven y aprende con nosotros, estamos para apoyar tus sueños, has parte de esta gran comunidad de Ovejas Purpuras.
+                    
                 </p>
-                <img class="imagen__oveja" src="./img/IMG_4892.jpg" alt="oveja" width="524px" height="450">
+                <img class="imagen__oveja" src="./img/IMG_4892.jpg" alt="oveja de viaje">
             </div>
         </div>
     </article>
@@ -72,39 +63,26 @@
     <article>
         <div class="mision">
             <h4 class="titulo">Nuestra misión y visión</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda rerum voluptates ex, modi beatae earum
-                ea
-                dicta qui similique recusandae praesentium minus repudiandae voluptatibus quaerat, expedita iure nemo
-                inventore fugit!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nihil, ullam eum qui adipisci sunt
-                similique cum quod corrupti! Sapiente, atque dolore! Soluta voluptatum in earum! Expedita possimus minus
-                laboriosam?
-        </div>
+            <p>Despertar la creatividad  de cada uno de nuestros alumnos por medio de jornadas, talleres o workshops, donde puedan vivir  la experiencia de aprender y realizar  eso que les apasiona pero nunca habían intentado. 
     </article>
 
 
-    
-        <h4 class="titulo">equipo de oveja púrpura</h4>
-        <div class="equipo">
+
+    <h4 class="titulo">equipo de oveja púrpura</h4>
+    <div class="equipo">
         <div class="bea">
             <h5 class="subtitulo">bea</h5>
             <p class="texto__bea">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis pariatur ab quia dicta distinctio
-                nesciunt
-                doloremque consectetur obcaecati culpa veniam, beatae expedita aut sapiente cumque quaerat, possimus
-                aspernatur ut provident?
-                <img class="imagen_bea" src="" alt="imagen bea">
+                Soy diseñadora de moda, interiores, un poco de gráfico y desarrollo de producto, amo profundamente las plantas y en especial los cactus, la palabra que me identifica es transformar, me encanta andar en bici y soy de signo géminis. 
+                <img class="imagen_bea" src="./img/IMG_6773.jpg" alt="imagen bea">
             </p>
             <br>
         </div>
         <div class="isa">
             <h5 class="subtitulo">Isaa</h5>
             <p class="texto__isa">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis pariatur ab quia dicta distinctio
-                nesciunt
-                doloremque consectetur obcaecati culpa veniam, beatae expedita aut sapiente cumque quaerat, possimus
-                aspernatur ut provident?
-                <img class="imagen_isa" src="" alt="imagen isa">
+                Soy estudiante, entusiasta de la moda y el diseño gracias a mi entorno familiar, en oveja púrpura me especializo en las actividades infantiles, la palabra que me identifica es exploración y me encanta la idea de siempre aprender algo nuevo.
+                <img class="imagen_isa" src="./img/IMG_6772.jpg" alt="imagen isa">
             </p>
 
         </div>
@@ -113,15 +91,15 @@
     <section>
         <h4 class="titulo">comentarios de nuestras alumnas</h4>
         <br>
-        <img src="./img/IMG_6071.jpg" alt="1" width="300px" height="80px">
-        <img src="./img/IMG_6072.jpg" alt="2" width="300px" height="80px">
-        <img src="./img/IMG_6073.jpg" alt="3" width="300px" height="90px">
-        <img src="./img/IMG_6074.jpg" alt="4" width="300px" height="70px">
-        <img src="./img/IMG_6075.jpg" alt="5" width="300px" height="60px">
-        <img src="./img/IMG_6076.jpg" alt="6" width="300px" height="100px">
-        <img src="./img/IMG_6080.jpg" alt="7" width="300px" height="80px">
-        <img src="./img/IMG_6081.jpg" alt="8" width="300px" height="70px">
-        <img src="./img/IMG_6082.jpg" alt="9" width="300px" height="70px">
+        <img src="./img/IMG_6071.jpg" alt="comentario 1" width="300px" height="80px">
+        <img src="./img/IMG_6072.jpg" alt="comentario 2" width="300px" height="80px">
+        <img src="./img/IMG_6073.jpg" alt="comentario 3" width="300px" height="90px">
+        <img src="./img/IMG_6074.jpg" alt="comentario 4" width="300px" height="70px">
+        <img src="./img/IMG_6075.jpg" alt="comentario 5" width="300px" height="60px">
+        <img src="./img/IMG_6076.jpg" alt="comentario 6" width="300px" height="100px">
+        <img src="./img/IMG_6080.jpg" alt="comentario 7" width="300px" height="80px">
+        <img src="./img/IMG_6081.jpg" alt="comentario 8" width="300px" height="70px">
+        <img src="./img/IMG_6082.jpg" alt="comentario 9" width="300px" height="70px">
         <br>
     </section>
 
@@ -150,7 +128,7 @@
         </div>
 
         <p class="correo">
-            telf: +593 98 512 7971
+            telf: +593 99 512 7971
             <br>
             ovejapurpuraws@gmail.com
         </p>
